# tuum-hotdeal-fastapi

./: .dockerignore  .env.example  .env.test  .gitignore  AGENT.md  AGENTS.md  Dockerfile  Dockerfile.worker  FRONTEND_IMPROVEMENT_OPTIONS.md  Makefile  README.md  WORKSPACE_PLAN.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  opencode.json  pyproject.toml  pyrightconfig.json  pytest.ini
.claude/scripts/: deploy_skill.sh
.gemini/: styleguide.md
.github/workflows/: deploy-dev.yml.disabled  deploy-main.yml.disabled  deploy.yml
.opencode/: oh-my-opencode.jsonc  oh-my-opencode_copy.json  oh-my-opencode_gemini.jsonc  oh-my-opencode_glm.jsonc  oh-my-opencode_oppus.jsonc  oh-my-opencode_perfect.jsonc
.sisyphus/: boulder.json  summary_latest.md
.sisyphus/drafts/: admin-code-review.md  cicd_analysis.md  fix_admin_draft.md  frontend-cicd-analysis.md  migration_plan.md
.sisyphus/plans/: admin-dashboard.md  admin-user-enhancement.md  admin-user-enhancement_report.md  admin_email_notification.md  approval-email-notification.md  browser-refactor.md  cicd-docs.md  create-tuum-project.md  deploy-frontend-cloudflare.md  deploy-frontend-cloudflare_report.md  emergency-repair-admin.md  fix-admin-critical-crash.md  fix-admin-dashboard-v2.md  (+16 more)
alembic/: env.py
app/: main.py  worker_main.py
docs/: CICD.md  CICD_SPEED_ANALYSIS_FUR-17.md  CICD_SPEED_ANALYSIS_FUR-19.md  CRAWLING_TEST_MANUAL.md  DATETIME_UTC_POLICY_FUR-24.md  FUR-21_RCA.md  VPS_NGINX_SETUP.md
static/: admin.html  admin_user_detail.html  home.html  hotdeal.html  index.html  login.html  login.js  script.js  signup.html  signup.js  style.css
tests/: conftest.py
(+116 files in other folders)
