[project]
name = "tuum-hotdeal-fastapi"
version = "0.1.0"
description = "핫딜 키워드 알림 서비스 - 사용자가 등록한 키워드로 핫딜 사이트를 크롤링하여 이메일 알림을 보내는 FastAPI 백엔드"
authors = [
    {name = "sharknia",email = "furychick0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "greenlet (>=3.2.0,<4.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosmtplib (>=4.0.1,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # 코드 스타일 검사 (PEP 8)
    "F",  # 실행 오류 가능성 감지 (Pyflakes)
    "UP", # 최신 Python 문법으로 변환 (pyupgrade)
    "B",  # 잠재적 버그 감지 (flake8-bugbear)
    "SIM", # 불필요한 복잡한 코드 감지 (flake8-simplify)
    "I",  # Import 정리 (isort)
    "W", # 경고
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.14.0"
ruff = "^0.14.13"
